Time: 1 ms (22.77%), Space: 40.9 MB (47.99%) - LeetHub